@@ -92,10 +92,8 @@ class testPageAdministrationGeneralRegexp extends CWebTest {
 
 		$this->openRegularExpressions();
 
-		$this->zbxTestDropdownSelect('go', 'Delete selected');
-		$this->zbxTestClick('goButton');
-		$this->waitForAlertPresent();
-		$this->assertAlert('No elements selected!');
+		$this->assertElementPresent("//select[@id='go' and @disabled]");
+		$this->assertElementPresent("//input[@id='goButton' and @disabled]");
 
 		$this->verifyHash();
 	}
